<resources>
    <string name="action_settings">Settings</string>
    <string name="app_id" translatable="false">kSd2G53GCqDEWMdJJak81tosgZw8KiAqGyQcq04w</string>
    <string name="app_key" translatable="false">VIYILpeRkiKMEVoMyaMwaCvOrWfqki4TNmdNnq0m</string>
    <string name="ACCOUNT_TYPE">ng.codehaven.eko.account</string>
    <string name="btn_contacts">CONTACTS</string>
    <string name="tap_to_scan_txt">Tap To Scan</string>
    <string name="qr_imageview_desc">QR Image View</string>
    <string name="navdrawer_item_request_funds">Request Funds</string>
    <string name="navdrawer_item_cash_in">Cash In</string>
    <string name="navdrawer_item_transaction_history">History</string>
    <string name="navdrawer_item_businesses">My Businesses</string>
    <string name="navdrawer_item_contacts">Contacts</string>
    <string name="navdrawer_item_settings">Settings</string>
    <string name="coverImage">Drawer Cover Image</string>
    <string name="lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="placeholder_lorem_ipsum" translatable="false">PlaceHolder</string>
    <string name="title_activity_request_funds">Request Funds</string>
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="title_activity_cash_in">Cash In</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_business">My Business</string>
    <string name="title_activity_contact">Contact</string>
    <string name="current_balance_txt">Current Balance</string>
    <string name="enter_amount_hint_txt">Amount</string>
    <string name="send_txt">Send</string>
    <string name="action_search">Search</string>
    <string name="title_activity_auth" translatable="false">AuthActivity</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="search_hint">Search</string>
    <string name="intro_a_title_txt">PAYMENTS MADE EASY</string>
    <string name="intro_a_body_txt">Pay people and for goods and services with ease.</string>
    <string name="intro_b_title_txt">Business On The Go!</string>
    <string name="intro_b_body_txt">Create, structure, monitor and grow your business with ease.</string>
    <string name="intro_c_title_txt">Cost Effective Marketing</string>
    <string name="intro_c_body_txt">Expand your business with and via efficient and effective promotions.</string>
    <string name="login_scan_btn_txt">Tap to Scan</string>
    <string name="title_activity_register_login" translatable="false">Register</string>
    <string name="loading_profile">Loading Profile</string>
    <string name="retry_btn_txt">Retry</string>
    <string name="sign_in_title_txt">Sign In</string>
    <string name="sign_in_logical_pin_hint_txt">Logical Pin</string>
    <string name="register_title_txt">Register</string>
    <string name="last_name_hint_txt">Last</string>
    <string name="first_name_hint_txt">First</string>
    <string name="name_label">Name</string>
    <string name="email_hint_txt">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password_hint_txt">Confirm Password</string>
    <string name="phone_hint_txt">Phone</string>
    <string name="register_btn_txt">Register</string>
    <string name="network_timeout_message_txt">Check your internet connection.</string>
    <string name="bad_qr_error_message">The QR code you scanned is not valid.</string>
    <string name="title_activity_personal_user_qr">Personal</string>
    <string name="title_activity_promotion">Promotion</string>
    <string name="title_activity_business_action">Business</string>
    <string name="title_activity_products_action">Product</string>
    <string name="title_activity_service_action">Service</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="select_source_title_text">Source</string>
    <string name="bank_label_txt">Bank</string>
    <string name="agent_label_txt">Agent</string>
    <string name="request_funds_btn_txt">Make Request</string>
    <string name="request_sent_message_txt">Request sent.</string>
    <string name="general_error_message_txt">Oops!!! Something fishy happend. Please try again.</string>
    <string name="title_activity_transaction_detail" translatable="false">Details</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="scan_qr_btn_txt">Scan QR</string>
    <string name="no_contacts">No contacts found</string>
    <string name="alphabet">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="menu_add_contact">Add contact</string>
    <string name="no_intent_found">No intent found.</string>
    <string name="no_address">No known address</string>
    <string name="no_contact_selected">No contact selected</string>
    <string name="title_activity_business_details">BusinessDetailsActivity</string>
    <string name="default_count">0</string>
    <string name="refresh_message">Is refreshing</string>
    <string name="add_business_menu_action">Add Business</string>
    <string name="switch_label">Is this a Transport business?</string>
    <string name="cancel">Cancel</string>
    <string name="no_user_logged_in_error_message">No user is logged in.</string>
    <string name="sec_action_image">Secondary Action</string>
    <string name="preferences_actions_title">When a barcode is found\u2026</string>
    <string name="preferences_bulk_mode_summary">Scan and save many barcodes continuously</string>
    <string name="preferences_bulk_mode_title">Bulk scan mode</string>
    <string name="preferences_copy_to_clipboard_title">Copy to clipboard</string>
    <string name="preferences_custom_product_search_summary" formatted="false">Substitutions: %s = contents, %f = format, %t = type</string>
    <string name="preferences_custom_product_search_title">Custom search URL</string>
    <string name="preferences_decode_1D_title">1D barcodes</string>
    <string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
    <string name="preferences_decode_QR_title">QR Codes</string>
    <string name="preferences_front_light_summary">Improves scanning in low light on some phones, but may cause glare. Does not work on all phones.</string>
    <string name="preferences_front_light_title">Use front light</string>
    <string name="preferences_general_title">General settings</string>
    <string name="preferences_name">Settings</string>
    <string name="preferences_play_beep_title">Beep</string>
    <string name="preferences_remember_duplicates_summary">Store multiple scans of the same barcode in History</string>
    <string name="preferences_remember_duplicates_title">Remember duplicates</string>
    <string name="preferences_reverse_image_summary">Enable on devices with a front camera only</string>
    <string name="preferences_reverse_image_title">Reversed camera image</string>
    <string name="preferences_result_title">Result settings</string>
    <string name="preferences_scanning_title">When scanning for barcodes, decode\u2026</string>
    <string name="preferences_search_country">Search country</string>
    <string name="preferences_supplemental_summary">Try to retrieve more information about the barcode contents</string>
    <string name="preferences_supplemental_title">Retrieve more info</string>
    <string name="preferences_vibrate_title">Vibrate</string>
    <string name="msg_bulk_mode_scanned">Bulk mode: barcode scanned and saved</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="msg_default_format">Format</string>
    <string name="msg_default_meta">Metadata</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
    <string name="msg_default_time">Time</string>
    <string name="msg_default_type">Type</string>
    <string name="msg_encode_contents_failed">Could not encode a barcode from the data provided.</string>
    <string name="msg_error">Error</string>
    <string name="msg_google_books">Google</string>
    <string name="msg_google_product">Google</string>
    <string name="msg_intent_failed">Sorry, the requested application could not be launched. The barcode contents may be invalid.</string>
    <string name="msg_invalid_value">Invalid value</string>
    <string name="msg_redirect">Redirect</string>
    <string name="msg_sbc_book_not_searchable">Sorry, this book is not searchable.</string>
    <string name="msg_sbc_failed">Sorry, the search encountered a problem.</string>
    <string name="msg_sbc_no_page_returned">No page returned</string>
    <string name="msg_sbc_page">Page</string>
    <string name="msg_sbc_results">Results</string>
    <string name="msg_sbc_searching_book">Searching book\u2026</string>
    <string name="msg_sbc_snippet_unavailable">Snippet not available</string>
    <string name="msg_share_explanation">You can share data by displaying a barcode on your screen and scanning it with another phone.</string>
    <string name="msg_share_text">Or type some text and press Enter</string>
    <string name="msg_sure">Are you sure?</string>
    <string name="msg_unmount_usb">Sorry, the SD card is not accessible.</string>
    <string name="flash_button_desc">Flash button</string>
    <string name="title_activity_enter_new_business">Enter Business Details</string>
    <string name="tos_header">Terms of service</string>
</resources>