<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:key="example_checkbox"
        android:title="@string/pref_title_social_recommendations"
        android:summary="@string/pref_description_social_recommendations"
        android:defaultValue="true" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:key="example_text"
        android:title="@string/pref_title_display_name"
        android:defaultValue="@string/pref_default_display_name"
        android:selectAllOnFocus="true"
        android:inputType="textCapWords"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:key="example_list"
        android:title="@string/pref_title_add_friends_to_messages"
        android:defaultValue="-1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

    <PreferenceCategory android:title="@string/preferences_scanning_title">
        <CheckBoxPreference
            android:key="preferences_decode_1D"
            android:defaultValue="true"
            android:title="@string/preferences_decode_1D_title"/>
        <CheckBoxPreference
            android:key="preferences_decode_QR"
            android:defaultValue="true"
            android:title="@string/preferences_decode_QR_title"/>
        <CheckBoxPreference
            android:key="preferences_decode_Data_Matrix"
            android:defaultValue="true"
            android:title="@string/preferences_decode_Data_Matrix_title"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preferences_actions_title">
        <CheckBoxPreference
            android:key="preferences_play_beep"
            android:defaultValue="true"
            android:title="@string/preferences_play_beep_title"/>
        <CheckBoxPreference
            android:key="preferences_vibrate"
            android:defaultValue="false"
            android:title="@string/preferences_vibrate_title"/>
        <CheckBoxPreference
            android:key="preferences_copy_to_clipboard"
            android:defaultValue="true"
            android:title="@string/preferences_copy_to_clipboard_title"/>
        <CheckBoxPreference
            android:key="preferences_remember_duplicates"
            android:defaultValue="false"
            android:title="@string/preferences_remember_duplicates_title"
            android:summary="@string/preferences_remember_duplicates_summary"/>
        <CheckBoxPreference
            android:key="preferences_supplemental"
            android:defaultValue="true"
            android:title="@string/preferences_supplemental_title"
            android:summary="@string/preferences_supplemental_summary"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preferences_result_title">
        <EditTextPreference
            android:key="preferences_custom_product_search"
            android:title="@string/preferences_custom_product_search_title"
            android:summary="@string/preferences_custom_product_search_summary"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preferences_general_title">
        <CheckBoxPreference
            android:key="preferences_front_light"
            android:defaultValue="false"
            android:title="@string/preferences_front_light_title"
            android:summary="@string/preferences_front_light_summary"/>
        <CheckBoxPreference
            android:key="preferences_bulk_mode"
            android:defaultValue="false"
            android:title="@string/preferences_bulk_mode_title"
            android:summary="@string/preferences_bulk_mode_summary"/>
        <CheckBoxPreference
            android:key="preferences_reverse_image"
            android:defaultValue="false"
            android:title="@string/preferences_reverse_image_title"
            android:summary="@string/preferences_reverse_image_summary"/>
        <ListPreference
            android:key="preferences_search_country"
            android:defaultValue="-"
            android:entries="@array/country_codes"
            android:entryValues="@array/country_codes"
            android:title="@string/preferences_search_country"/>
    </PreferenceCategory>

</PreferenceScreen>
