<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ng.codehaven.eko.ui.activities.RequestFundsActivity">

    <!--Toolbar-->

    <include
        android:id="@+id/homeToolBar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/homeToolBar"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin">

        <ng.codehaven.eko.ui.views.CustomTextView
            style="@style/bodyTextViewStyle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_source_title_text" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:background="@color/colorPrimary" />

        <RadioGroup
            android:id="@+id/sourceRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">

            <RadioButton
                android:id="@+id/bankRadioBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bank_label_txt" />

            <RadioButton
                android:id="@+id/agentRadioBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/agent_label_txt" />

        </RadioGroup>

        <LinearLayout
            android:id="@+id/amountFormWrap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="48dp">

            <ng.codehaven.eko.ui.views.CustomTextView
                style="@style/bodyTextViewStyle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_amount_hint_txt" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:background="@color/colorPrimary" />

            <EditText
                android:id="@+id/amountEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:hint="@string/enter_amount_hint_txt"
                android:inputType="numberDecimal"
                android:maxLines="1"/>

            <Button
                android:id="@+id/requestFundsSubmitBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/request_funds_btn_txt"/>

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
