<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:float="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/contentMaterialLightBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ng.codehaven.eko.ui.activities.CashInActivity">

    <!--Toolbar-->

    <include
        android:id="@+id/homeToolBar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/homeToolBar"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/current_balance_txt" />

        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            float:fletPaddingLeft="0dp"
            float:fletPaddingRight="0dp"
            float:fletPaddingTop="8dp"
            float:fletPaddingBottom="8dp"
            float:fletTextAppearance="@style/TextAppearance.AppCompat.Inverse">

            <EditText
                android:id="@+id/fundRequestEditView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_text_default_material_light"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:hint="@string/enter_amount_hint_txt"
                android:inputType="number"
                android:maxLines="1">

                <requestFocus />
            </EditText>
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>

        <Button
            android:id="@+id/sendBtn"
            android:layout_marginTop="8dp"
            android:background="@drawable/flat_selector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:text="@string/send_txt" />
    </LinearLayout>


</RelativeLayout>
